# uCore

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-format.cmake
include/reinix/: types.h
kernel/: CMakeLists.txt  kernel.cmake  log.c  version.c  version.h
kernel/arch/: print.h
kernel/arch/x86_64/: arch.cmake  cpu.asm  cpuid.c  flags.cmake  gdt.c  idt.c  idt.h  panic.c  slab.c
kernel/arch/x86_64/apic/: apic.c  apic.h  mp.c  pic.c  wakeup.asm
kernel/arch/x86_64/cpu/: cpuid.c  cpuid.h
kernel/arch/x86_64/interrupt/: isr.c
kernel/arch/x86_64/pc/: idt.c  main.c  state.h
kernel/arch/x86_64/pc/apic/: apic.h  wakeup.asm
kernel/arch/x86_64/pc/interrupt/: isr.c
kernel/arch/x86_64/pc/vm/: alloc.c
kernel/arch/x86_64/pm/: init.c  pm.h  stack.c  status.h
kernel/arch/x86_64/vm/: alloc.c  init.c  mapper.c
kernel/include/: bootinfo.h
kernel/include/lib/libc/: stdio.h
kernel/include/lib/version/: version.h
kernel/include/platform/: print.h
kernel/lib/: lib.h  snprintf.c  vt100-codes.h  vt100.c
kernel/lib/libc/: print.c  snprintf.c
kernel/lib/log/: log.c
kernel/lib/vt100/: vt100-codes.h  vt100.c  vt100.h
kernel/platform/pc/: boot.asm  bootinfo.c  console.c  console.h  flags.cmake  layout.ld  main.c  platform.cmake
kernel/platform/pc/pm/: init.c  stack.c  stack.h
kernel/platform/pc/vm/: alloc.c
src/: CMakeLists.txt  kernel.cmake  log.c  log.h  version.c  version.h
src/arch/: print.h
src/arch/x86_64/: apic.c  apic.h  architecture.cmake  cpu.asm  cpu_state.hpp  cpuid-features.h  cpuid.asm  cpuid.c  cpuid.cpp  cpuid.h  cpuid.hpp  flags.cmake  fpu.asm  gdt.asm  gdt.c  gdt.cpp  gdt.h  gdt.hpp  gdt.inc  global.hpp  idt.asm  idt.cpp  idt.hpp  init.cpp  init.hpp  io-port.h  isr.cpp  panic.c  pic.cpp  pic.hpp  state.h
src/arch/x86_64/asm/: cpu.asm  cpuid.asm  fpu.asm  gdt_idt.asm  global.inc  isr.asm  msr.asm
src/arch/x86_64/cpu/: gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  io_port.hpp  isr.asm  isr.cpp  state.hpp
src/arch/x86_64/cpu/apic/: pic.cpp
src/arch/x86_64/interrupt/: isr.cpp
src/arch/x86_64/mm/: address_space.cpp  address_space.hpp  frame_alloc.cpp  frame_alloc.hpp  heap_break.hpp
src/arch/x86_64/pc/: boot.asm  bootinfo.c  bootinfo.h  console.c  console.h  flags.cmake  gdt.asm  gdt.c  gdt.h  global.asm  idt.c  isr.asm  isr.c  layout.ld  main.c  paging.c  pit.c  serial.c  slab.c  state.h
src/arch/x86_64/pc/apic/: apic.c  apic.h  mp.c  mp.h  pic.c  pic.h  wakeup.asm
src/arch/x86_64/pc/interrupt/: isr.c
src/arch/x86_64/pc/multiboot/: multiboot2.c  multiboot2.h
src/arch/x86_64/pc/pm/: init.c  pm.h  stack.c  stack.h
src/arch/x86_64/pc/vm/: alloc.c  init.c  mapper.c  paging.c  vm.h
src/arch/x86_64/pm/: pm.cpp  pm.hpp
src/include/kernel/: bootinfo.hpp  panic.hpp  version.hpp
src/include/lib/: allocator.hpp
src/include/lib/terminal/: display.hpp  emulator.hpp  terminal.hpp
src/include/platform/: print.hpp
src/kernel/: allocator.cpp  bootinfo.hpp  kernel.cmake  panic.hpp  version.cpp  version.hpp
src/kernel/memory/: heap_alloc.hpp  heap_break.hpp  memory.cpp  memory.hpp
src/kernel/memory/physical/: frame_alloc.hpp  physical_alloc.hpp
src/kernel/memory/virtual/: address_space.hpp  virtual_alloc.cpp  virtual_alloc.hpp
src/lib/: library.cmake  printf.cpp  snprintf.c  snprintf.cpp  vt100.c  vt100.h
src/lib/cxx/: CMakeLists.txt  allocator.hpp  list.hpp  printf.cpp  snprintf.cpp
src/lib/cxx/include/: allocator.hpp  list.hpp  stdio.hpp
src/lib/multiboot/: multiboot2.cpp
src/lib/multiboot/include/: multiboot.hpp  multiboot2.hpp
src/lib/rxx/: CMakeLists.txt  allocator.hpp  array.hpp  list.hpp  printf.cpp  snprintf.cpp  stdio.hpp
src/lib/terminal/: CMakeLists.txt  display.hpp  emulator.cpp  emulator.hpp
src/lib/terminal/include/terminal/: display.hpp  emulator.hpp
src/platform/: print.hpp
src/platform/pc/: boot.asm  bootinfo.cpp  console.cpp  console.hpp  layout.ld  main.c  main.cpp  multiboot.cpp  multiboot.hpp  platform.cmake
src/print/: print.c  print.h  vt100.c
(+12 files in other folders)
